syntax = "proto3";

option csharp_namespace = "WebAdmin.Grpc";

import "google/protobuf/timestamp.proto";

package logs;

service LogService {
  rpc GetLogsAsync (GetLogsRequest) returns (GetLogsResponse);
}

message LogData {
  google.protobuf.Timestamp timestamp = 1;
  string level = 2;
  string message_template = 3;
  string method = 4;
  string path = 5;
  string request_body = 6;
  int32 status_code = 7;
  string response_body = 8;
  string controller = 9;
  string application = 10;
  string source_context = 11;
  string request_id = 12;
  string request_path = 13;
  string connection_id = 14;
  string user = 15;
  string exception = 16;
}

message LogResponse {
  LogData data = 1;
}

message GetLogsRequest {
  LogData filter = 1;
}

message GetLogsResponse {
  repeated LogResponse logs = 1;
}